--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+:root{
+  height: 100%;
+}
  
 @layer base {
   :root {
@@ -74,3 +80,5 @@
     @apply bg-background text-foreground;
   }
 }
+
+@import "~@uploadthing/react/styles.css"
